@@ -1,19 +1,0 @@
-# $NetBSD: Makefile,v 1.9 2022/01/04 20:54:53 wiz Exp $
-
-DISTNAME=	colour-0.1.5
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
-CATEGORIES=	textproc python
-MASTER_SITES=	${MASTER_SITE_PYPI:=c/colour/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://github.com/vaab/colour
-COMMENT=	Converts and manipulates various color representation
-LICENSE=	2-clause-bsd
-
-DEPENDS+=	${PYPKGPREFIX}-d2to1-[0-9]*:../../devel/py-d2to1
-
-USE_LANGUAGES=	# none
-
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
