@@ -1,10 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2017/09/26 17:41:28 adam Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/colour.py
-${PYSITELIB}/colour.pyc
-${PYSITELIB}/colour.pyo
