@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.4210 2023/07/03 21:06:38 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.4211 2023/07/03 21:20:11 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -5879,3 +5879,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated shells/oh-my-posh to 17.6.0 [pin 2023-07-03]
 	Updated pkgtools/python-versions-check to 1.4 [wiz 2023-07-03]
 	Removed devel/py-stsci.distutils [wiz 2023-07-03]
+	Removed textproc/py-colour [wiz 2023-07-03]
